# ruoyi-django

./: README.md
backend/: README.md  db.sqlite3  dev.md  pyproject.toml  requirements.txt
backend/apps/: __init__.py
backend/apps/common/: encrypt.py  excel.py  mixins.py  pagination.py  util_model.py
backend/apps/datasource/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/datasource/migrations/: 0001_initial.py
backend/apps/dbutils/: __init__.py  base.py  factory.py  mysql.py  postgres.py  presto.py  sqlite.py
backend/apps/monitor/: middleware.py  models.py  serializers.py  urls.py  views.py
backend/apps/monitor/migrations/: 0001_initial.py  0002_logininfor.py
backend/apps/system/: __init__.py  exceptions.py  models.py  permission.py  serializers.py  urls.py
backend/apps/system/management/: __init__.py
backend/apps/system/migrations/: 0001_initial.py  0002_notice_post_userpost.py  0002_post_userpost.py  0003_notice.py  0004_menu_rolemenu.py  0004_merge_0002_notice_post_userpost_0003_notice.py  0005_dictdata_dicttype.py  0006_dept_sys_dept_parent__71805c_idx_and_more.py  0007_dept_del_flag_user_del_flag_alter_dept_create_by_and_more.py  0008_rolemenu_create_by_rolemenu_create_time_and_more.py  0009_remove_user_first_name_remove_user_last_name.py  0010_alter_user_username.py  0011_alter_user_username.py  0012_alter_user_username.py
backend/apps/system/views/: __init__.py  config.py  core.py  dept.py  dict.py  (+5 more)
backend/apps/utils/: __init__.py  excel.py
backend/config/: settings.py  urls.py
backend/media/templates/: 用户导入模板.xlsx
(+36 files in other folders)
