[project]
name = "ruoyi-django-backend"
version = "0.1.0"
description = "Ruoyi Django backend with Django + DRF"
requires-python = ">=3.12"
dependencies = [
  "asgiref==3.10.0",
  "Django==5.2.8",
  "django-ranged-response==0.2.0",
  "django-simple-captcha==0.6.2",
  "djangorestframework==3.16.1",
  "djangorestframework_simplejwt==5.5.1",
  "drf-spectacular==0.27.1",
]

[tool.uv]
dev-dependencies = []

